--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   margin: 0 !important;
   box-sizing: border-box;
 }
-.conter{
+.conte{
   background-image:url(../img/bg2.jpg);
    background-position: 100% 100%;
    background-size: cover;
@@ -12,12 +12,15 @@
   background-color: rgba(0, 0, 0, 0.169);
 }
 .box{
-  border: 2px solid rgba(255,255,255,0.5);
+  border: 2px solid rgb(56, 149, 248);
   border-radius: 20px;
   backdrop-filter: blur(8px);
   width: 100%;
-  height: 70%;
+  height: 70%vh;
  display: flex;
  justify-content: center;
  flex-direction: column;
+}
+#play{
+  display: none;
 }
